--- a/BookResale.Web/wwwroot/index.html
+++ b/BookResale.Web/wwwroot/index.html
@@ -10,6 +10,45 @@
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="BookResale.Web.styles.css" rel="stylesheet" />
+    <link href="css/bootstrap/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="css/bootstrap/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
+    <!-- Font : Sans Serif -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    <!-- Header style sheet -->
+    <link href="css/custom-styling/Header.css" rel="stylesheet" />
+    <!-- General style sheet -->
+    <link href="css/custom-styling/general.css" rel="stylesheet" />
+    <!-- books style sheet -->
+    <link href="css/custom-styling/books.css" rel="stylesheet" />
+    <!-- Footer style sheet -->
+    <link href="css/custom-styling/Footer.css" rel="stylesheet" />
+    <style>
+        * {
+            font-family: 'Open Sans', sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            text-transform: capitalize;
+        }
+
+        a, ul, li {
+            text-decoration: none;
+            list-style: none;
+        }
+
+        :root {
+            --baby-blue: #89cff0;
+            --lookalike-gray: #909090;
+            --orange: #f15928;
+            --bronze: #393d33;
+        }
+
+        .cl-red {
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
