--- a/BookResale.Web/wwwroot/index.html
+++ b/BookResale.Web/wwwroot/index.html
@@ -43,8 +43,10 @@
     <link href="css/custom-styling/Profile.css" rel="stylesheet" />
     <!-- Search Result style sheet -->
     <link href="css/custom-styling/SearchResult.css" rel="stylesheet" />
-    <!-- Search Result style sheet -->
+    <!-- Become A Seller style sheet -->
     <link href="css/custom-styling/BecomeASeller.css" rel="stylesheet" />
+    <!-- Inbox style sheet -->
+    <link href="css/custom-styling/Inbox.css" rel="stylesheet" />
     <style>
         * {
             font-family: 'Open Sans', sans-serif;
